# gtools

./: CMakeLists.txt  LICENSE  conanfile.txt  tasks.py
.github/workflows/: ci.yml
plugins/json_formatter/: plugin.cpp
plugins/xml_formatter/: CMakeLists.txt  plugin.cpp
src/app/: main.cpp
